@@ -9,7 +9,7 @@
   <p>
     <%= label_tag :acompanhantes %><br />
     <%= select("acompanhantes","num", 0..10, {}) %>
-	<%= hidden_field_tag 'id', params[:id] %>
+
   </p>
   <p>
     <%= submit_tag "Hospedar" %>
